add website image assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <title>Naijawebcreations-Websites and apps for 200k</title>
 </head>
 <body>
-    <h1>website is live!</h1>
-    <h1>last change</h1>
+    <section id="navbar">
+        <nav>
+            <div class="logo">
+                <img src="" alt="website logo">
+            </div>
+           <div class="nav-links">
+            <a href="#">services</a>
+            <a href="#">work</a>
+            <a href="#">results</a>
+            <a href="#">testimonials</a>
+            <a href="#">book a call</a>
+            <a href="#">FAQ</a>
+           </div>
+           <div class="language-select-form">
+            <input type="select" name="language" id="language" >
+           </div>
+        </nav>    
+    </section>
+    <section id="banner">
+        <h1 class="text-center">
+            every serious business cannot do without a website <br>
+            get a website for your business today for just 200k.
+        </h1>
+        <p>Don't hesitate to give us a call!</p>
+        <button class="call-us-now-btn">call us now</button>
+    </section>
 </body>
 </html>
