adding banner section

--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naijawebcreations-Websites and apps for 200k</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
     <section id="navbar">
-        <nav>
+        <nav class="dm-sans-font capitalize">
             <div class="logo">
-                <img src="" alt="website logo">
+                <h1>nwc</h1>
             </div>
-           <div class="nav-links">
-            <a href="#">services</a>
-            <a href="#">work</a>
-            <a href="#">results</a>
-            <a href="#">testimonials</a>
-            <a href="#">book a call</a>
-            <a href="#">FAQ</a>
-           </div>
-           <div class="language-select-form">
-            <input type="select" name="language" id="language" >
-           </div>
-        </nav>    
+            <div class="nav-links">
+                <a href="#">services</a>
+                <a href="#">work</a>
+                <a href="#">results</a>
+                <a href="#">testimonials</a>
+                <a href="#">book a call</a>
+                <a href="#">FAQ</a>
+            </div>
+            <div class="language-select-form">
+                <select name="language" id="language-form">
+                    <option value="english">English</option>
+                    <option value="french">French</option>
+                </select>
+            </div>
+        </nav>
     </section>
-    <section id="banner">
-        <h1 class="text-center">
-            every serious business cannot do without a website <br>
-            get a website for your business today for just 200k.
+    <section id="banner" class="text-center dm-sans-font ">
+        <h1 class="fs-2 fw-900 p-sm">
+            More leads from <br> your website, guaranteed.
         </h1>
-        <p>Don't hesitate to give us a call!</p>
-        <button class="call-us-now-btn">call us now</button>
+        <p class="p-sm">Don't hesitate to give us a call!</p>
+        <a href="tel:+2349168424529" class="call-us-now-btn fw-700">Call us now!</a>
     </section>
 </body>
+
 </html>
