completed page banner

--- a/index.html
+++ b/index.html
@@ -31,12 +31,27 @@
             </div>
         </nav>
     </section>
-    <section id="banner" class="text-center dm-sans-font ">
-        <h1 class="fs-2 fw-900 p-sm">
-            More leads from <br> your website, guaranteed.
-        </h1>
-        <p class="p-sm">Don't hesitate to give us a call!</p>
-        <a href="tel:+2349168424529" class="call-us-now-btn fw-700">Call us now!</a>
+    <section id="sample-work">
+        <div class="sample-work-images">
+            <div class="image-container">
+                <img src="assets/images/agency-work-image-2.png" alt="website design 1">
+            </div>
+            <div class="image-container">
+                <img src="assets/images/agency-work-image-10.png" alt="website design 2">
+            </div>
+        </div>
+    </section>
+    <section id="banner" class="text-center league-spartan-font">
+        <div>
+
+            <h1 class="mb-sm fs-2 fw-900">
+                More leads from your <br> website, guaranteed.
+            </h1>
+            <p class="mb-lg fw-normal">Don't hesitate to give us a call for custom web design and development for your
+                business
+            </p>
+            <a href="tel:+2349168424529" class="call-us-now-btn mt-sm fw-700">Call us now!</a>
+        </div>
     </section>
 </body>
 
