add the banner images

--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
             </div>
         </nav>
     </section>
+    <!-- sample work -->
     <section id="sample-work">
         <div class="sample-work-images">
-            <div class="image-container">
-                <img src="assets/images/agency-work-image-2.png" alt="website design 1">
-            </div>
-            <div class="image-container">
-                <img src="assets/images/agency-work-image-10.png" alt="website design 2">
-            </div>
+            <img src="assets/images/agency-work-image-2.png" alt="website design 1" width="240" height="180">
+            <img src="assets/images/agency-work-image-10.png" alt="website design 2" width="240" height="180">
         </div>
     </section>
+    <!-- banner -->
     <section id="banner" class="text-center league-spartan-font">
         <div>
 
