add definite height and width to prep percentages

--- a/index.html
+++ b/index.html
@@ -31,13 +31,28 @@
             </div>
         </nav>
     </section>
+
     <!-- sample work -->
     <section id="sample-work">
         <div class="sample-work-images">
-            <img src="assets/images/agency-work-image-2.png" alt="website design 1" width="240" height="180">
-            <img src="assets/images/agency-work-image-10.png" alt="website design 2" width="240" height="180">
+            <div class="sample-work-image sample-work-image-1">
+                <!-- <img src="assets/images/agency-work-image-2.png" alt="website design 1"> -->
+            </div>
+            <div class="sample-work-image sample-work-image-2">
+                <!-- <img src="assets/images/agency-work-image-10.png" alt="website design 2"> -->
+            </div>
+        </div>
+
+        <div class="sample-work-images-2">
+            <div class="sample-work-image sample-work-image-3">
+                <!-- <img src="assets/images/agency-work-image-2.png" alt="website design 1"> -->
+            </div>
+            <div class="sample-work-image sample-work-image-4">
+                <!-- <img src="assets/images/agency-work-image-10.png" alt="website design 2"> -->
+            </div>
         </div>
     </section>
+
     <!-- banner -->
     <section id="banner" class="text-center league-spartan-font">
         <div>
