add html for website

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <!-- banner -->
-    <section id="banner" class="text-center league-spartan-font">
+    <section id="banner" class="text-center inter-font">
         <div>
 
             <h1 class="mb-sm fs-2 fw-900">
@@ -66,6 +66,197 @@
             <a href="tel:+2349168424529" class="call-us-now-btn mt-sm fw-700">Call us now!</a>
         </div>
     </section>
+
+    <!-- web advert -->
+    <section id="webadvert dm-sans-font">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                        class="bi bi-laptop" viewBox="0 0 16 16">
+                        <path
+                            d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5" />
+                    </svg>
+                    <h4 class="fs-2">You know a website is <br> important...</h4>
+                    <p class="fs-5">But it's easy to push aside until you miss out on clients because of it.</p>
+                    <div class="page-links">
+                        <a href="#" class="btn-link link1 league-spartan-font">Results</a>
+                        <a href="#" class="btn-link link2 league-spartan-font">Services</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="image-container">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- why choose us -->
+    <section id="whyChooseUs league-spartan-font">
+        <div class="container">
+            <h4>So why should I choose you?</h4>
+            <div class="why-choose-us-box-container">
+                <div class="why-choose-us-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-person-raised-hand" viewBox="0 0 16 16">
+                        <path
+                            d="M6 6.207v9.043a.75.75 0 0 0 1.5 0V10.5a.5.5 0 0 1 1 0v4.75a.75.75 0 0 0 1.5 0v-8.5a.25.25 0 1 1 .5 0v2.5a.75.75 0 0 0 1.5 0V6.5a3 3 0 0 0-3-3H6.236a1 1 0 0 1-.447-.106l-.33-.165A.83.83 0 0 1 5 2.488V.75a.75.75 0 0 0-1.5 0v2.083c0 .715.404 1.37 1.044 1.689L5.5 5c.32.32.5.754.5 1.207" />
+                        <path d="M8 3a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3" />
+                    </svg>
+                    <h5 class="fs-3">No BS</h5>
+                    <p>We won't waste your time with stupid questions, <br> we only get the important info and get to
+                        work.</p>
+                    <a href="#">learn more </a>
+                </div>
+                <div class="why-choose-us-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-bar-chart-line-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1z" />
+                    </svg>
+                    <h5 class="fs-3">Result driven</h5>
+                    <p>Our first priority is to get you results. Less talk <br> more walk.</p>
+                    <a href="#">learn more </a>
+                </div>
+                <div class="why-choose-us-box">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-brush-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M15.825.12a.5.5 0 0 1 .132.584c-1.53 3.43-4.743 8.17-7.095 10.64a6.1 6.1 0 0 1-2.373 1.534c-.018.227-.06.538-.16.868-.201.659-.667 1.479-1.708 1.74a8.1 8.1 0 0 1-3.078.132 4 4 0 0 1-.562-.135 1.4 1.4 0 0 1-.466-.247.7.7 0 0 1-.204-.288.62.62 0 0 1 .004-.443c.095-.245.316-.38.461-.452.394-.197.625-.453.867-.826.095-.144.184-.297.287-.472l.117-.198c.151-.255.326-.54.546-.848.528-.739 1.201-.925 1.746-.896q.19.012.348.048c.062-.172.142-.38.238-.608.261-.619.658-1.419 1.187-2.069 2.176-2.67 6.18-6.206 9.117-8.104a.5.5 0 0 1 .596.04" />
+                    </svg>
+                    <h5 class="fs-3">3 revisions</h5>
+                    <p>If you don't like something about your website, let <br> us know and we are up to fix it.</p>
+                    <a href="#">learn more </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- services section -->
+    <section id="services">
+        <div class="container">
+            <div class="service-box-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1z" />
+                </svg>
+                <h5 class="fs-3">Custom web-design</h5>
+                <p>All the websites we make are custom designed to fix specifically your <br> problems. NO templates</p>
+                <a href="#">learn more</a>
+            </div>
+            <div class="service-box-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-check-lg" viewBox="0 0 16 16">
+                    <path
+                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z" />
+                </svg>
+                <h5 class="fs-3">3D-design</h5>
+                <p>We use Spline to add custom 3d assets to your <br> website.</p>
+                <a href="#">learn more</a>
+            </div>
+            <div class="service-box-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-graph-up-arrow" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M0 0h1v15h15v1H0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5" />
+                </svg>
+                <h5 class="fs-3">Reservation <br> systems & <br> automations</h5>
+                <p>We add reservation systems, reminders to reduce no-shows for you</p>
+                <a href="#">learn more</a>
+            </div>
+            <div class="service-box-4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-credit-card-2-front" viewBox="0 0 16 16">
+                    <path
+                        d="M14 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z" />
+                    <path
+                        d="M2 5.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5" />
+                </svg>
+                <h5 class="fs-3">SEO Optimization</h5>
+                <p>We adjust your sites copy and links to make sure your business ranks <br> the highest on Google and
+                    gets more traffic from it.</p>
+                <a href="#">learn more</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- recent work -->
+    <section id="recent-work">
+        <h3 class="text-center">Recent work</h3>
+    </section>
+
+    <!-- results section -->
+    <section id="results">
+        <div class="container">
+            <h3>Results</h3>
+            <div class="result-sample">
+                <p>Made 420€ from reservations for client from his website <br> in the first day of running it. Already
+                    paying off his fees for <br> the first few months.</p>
+                <img src="assets/images/results-image.avif" alt="">
+            </div>
+            <a href="#" class="btn-link link1">Book a call</a>
+        </div>
+    </section>
+
+    <!-- faq section -->
+    <section id="faq" class="league-spartan-font">
+        <div class="container">
+            <h3 class="text-center uppercase fs-2">FAQ</h3>
+        </div>
+    </section>
+
+    <!-- what our clients say -->
+    <section id="clients league-spartan-font">
+        <div class="container text-center">
+            <h3>What our clients say</h3>
+            <p>What I liked the most is you're very easy to reach. It doesn't take you long to respond, and you always
+                do so in 1-2 hours. I really liked the way you followed the design, and made my website like I wanted it
+                to. You made it extremely fast, and made it responsive way faster than any other website creator that
+                I've worked with in the past. What I also extremely liked is that you setup a Google Calendar, so my
+                clients could book a meeting with me through my website. I'll definitely come back to you if I have
+                another project</p>
+            <div class="profile">
+
+            </div>
+        </div>
+    </section>
+
+    <!-- book a call now -->
+    <section id="bookacall">
+        <div class="call-logo">
+
+        </div>
+        <div class="contact-form">
+
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="logo-and-links">
+
+        </div>
+        <div class="footer-link"><span>services</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+          </svg></div>
+        <div class="footer-link"><span>work</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+          </svg></div>
+        <div class="footer-link"><span>testimonials</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+          </svg></div>
+        <div class="footer-link"><span>faq</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+          </svg></div>
+        <div class="footer-link"><span>book a call</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+          </svg></div>
+        <hr>
+        <span>nwc<sup>TM</sup> 2024 - All Rights Reserved</span>
+    </footer>
 </body>
 
 </html>
