--- a/index.html
+++ b/index.html
@@ -209,51 +209,55 @@
     </section>
 
     <!-- what our clients say -->
-    <section id="clients league-spartan-font">
-        <div class="container text-center">
-            <h3>What our clients say</h3>
-            <p>What I liked the most is you're very easy to reach. It doesn't take you long to respond, and you always
-                do so in 1-2 hours. I really liked the way you followed the design, and made my website like I wanted it
-                to. You made it extremely fast, and made it responsive way faster than any other website creator that
-                I've worked with in the past. What I also extremely liked is that you setup a Google Calendar, so my
-                clients could book a meeting with me through my website. I'll definitely come back to you if I have
-                another project</p>
+    <section id="clients" class="league-spartan-font text-center">
+        <div class="container">
+            <h3 class="fs-2 mb-sm">What our clients say</h3>
+            <p class="mb-lg client-text">"What I liked the most is you're very easy to reach. It doesn't take you long to
+                <br> respond, and you always
+                do so in 1-2 hours. I really liked the way you followed the <br> design, and made my website like I
+                wanted it
+                to. You made it extremely fast, and <br> made it responsive way faster than any other website creator
+                that
+                I've worked with <br> in the past. What I also extremely liked is that you setup a Google Calendar, so
+                my <br>
+                clients could book a meeting with me through my website. I'll definitely come back <br> to you if I have
+                another project."</p>
             <div class="profile">
-
+                <img src="assets/images/user_profile.png" alt="client-user-image" width="50" height="50">
             </div>
         </div>
     </section>
 
     <!-- book a call now -->
-    <section id="bookacall">
+    <section id="bookacall" class="league-spartan-font mt-y-lg mb-lg">
         <div class="container">
             <div class="book-a-call">
-                <div class="call-us-cta">
-                    <h1>Book a free call!</h1>
-                    <p>Simply fill out the form and I'll get back to you with the next <br>
+                <div class="call-us-cta w-50 text-center">
+                    <h1 class="fs-1 fw-600 mt-y-lg">Book a free call!</h1>
+                    <p class="fw-normal">Simply fill out the form and I'll get back to you with the next <br>
                         steps in 24 hours.</p>
                 </div>
-                <div class="contact-form">
+                <div class="contact-form w-50">
                     <form action="" id="callUsForm">
                         <label for="customername">Name</label>
                         <input type="text" name="customername" id="customerName">
-                        <label for="customermail">Name</label>
+                        <label for="customermail">Email</label>
                         <input type="email" name="customermail" id="customerMail">
-                        <label for="funnel">How did you find us?</label>
+                        <!-- <label for="funnel">How did you find us?</label>
                         <select name="funnel" id="funnel">
                             <option value="instagram">Instagram</option>
                             <option value="twitter">Twitter</option>
                             <option value="youtube">Youtube</option>
-                        </select>
-                        <label for="currentsite">your website address</label>
+                        </select> -->
+                        <label for="currentsite">Your website address</label>
                         <input type="text" name="currentsite" id="currentsite">
-                        <label for="budget">estimated budget</label>
+                        <label for="budget">Estimated budget</label>
                         <select name="budget" id="budget">
                             <option value="200,000">200,000</option>
                             <option value="300000">350,000 - 500,000</option>
                             <option value="1000000">1000000+</option>
                         </select>
-                        <label for="sitedetails">your goal for the website</label>
+                        <label for="sitedetails">Your goal for the website</label>
                         <textarea name="sitedetails" id="sitedetails"></textarea>
                         <label for="extradetails">Anything else you want me to know about</label>
                         <textarea name="extradetails" id="extradetails"></textarea>
