--- a/index.html
+++ b/index.html
@@ -68,21 +68,18 @@
         </div>
     </section>
 
-    <!-- web advert -->
-    <section id="webadvert dm-sans-font">
+    <!-- website advert -->
+    <section id="webadvert" class="dm-sans-font">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
-                        class="bi bi-laptop" viewBox="0 0 16 16">
-                        <path
-                            d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5" />
-                    </svg>
-                    <h4 class="fs-2">You know a website is <br> important...</h4>
-                    <p class="fs-5">But it's easy to push aside until you miss out on clients because of it.</p>
+                    <i class="bi bi-browser-chrome fs-4 mb-lg"></i>
+                    <h5 class="fs-2">You know a website is <br> important...</h5>
+                    <p class="fs-5 fw-normal my-sm dm-sans-font">But it's easy to push aside until you miss out on
+                        clients because <br> of it.</p>
                     <div class="page-links">
-                        <a href="#" class="btn-link link1 league-spartan-font">Results</a>
-                        <a href="#" class="btn-link link2 league-spartan-font">Services</a>
+                        <a href="#" class="btn-link link1">Results</a>
+                        <a href="#" class="btn-link link2">Services</a>
                     </div>
                 </div>
                 <div class="col">
@@ -100,21 +97,22 @@
             <h4 class="fs-3 mt-y-lg">So why should I choose you?</h4>
             <div class="why-choose-us-box-container">
                 <div class="why-choose-us-box">
-                    <i class="bi bi-person-raised-hand fs-2 d-inline-block"></i>
+                    <i class="bi bi-person-raised-hand fs-4 d-inline-block"></i>
                     <h5 class="fs-3 mt-lg">No BS</h5>
-                    <p class="py-sm">We won't waste your time with stupid questions, <br> we only get the important info
+                    <p class="py-sm">We won't waste your time with unecessary questions, <br> we only get the important
+                        info
                         and get to
                         work.</p>
                     <a href="#">Learn more <i class="bi bi-arrow-up-right"></i></a>
                 </div>
                 <div class="why-choose-us-box">
-                    <i class="bi bi-bar-chart-fill fs-2 d-inline-block"></i>
+                    <i class="bi bi-bar-chart-fill fs-4 d-inline-block"></i>
                     <h5 class="fs-3 mt-lg">Result driven</h5>
                     <p class="py-sm">Our first priority is to get you results. Less talk <br> more walk.</p>
                     <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
                 </div>
                 <div class="why-choose-us-box">
-                    <i class="bi bi-brush-fill fs-2 d-inline-block"></i>
+                    <i class="bi bi-brush-fill fs-4 d-inline-block"></i>
                     <h5 class="fs-3 mt-lg">3 revisions</h5>
                     <p class="py-sm">If you don't like something about your website, let <br> us know and we are up to
                         fix it.</p>
@@ -186,11 +184,11 @@
 
     <!-- faq section -->
     <section id="faq" class="mb-lg">
-        <h3 class="text-center uppercase fs-2">FAQ</h3>
+        <h3 class="text-center uppercase fs-2 league-spartan-font">FAQ</h3>
         <div class="accordion-container">
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">How fast will my new website be?</span>
+                    <span class="faq-text">How fast will my new website be?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
@@ -203,7 +201,7 @@
 
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">Will my website work on mobile and other devices?</span>
+                    <span class="faq-text">Will my website work on mobile and other devices?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
@@ -213,7 +211,7 @@
 
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">How long will it take to publish my website?</span>
+                    <span class="faq-text">How long will it take to publish my website?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
@@ -223,7 +221,7 @@
 
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">How much will a new website cost?</span>
+                    <span class="faq-text">How much will a new website cost?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
@@ -233,7 +231,7 @@
 
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">Can you help me with SEO?</span>
+                    <span class="faq-text">Can you help me with SEO?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
@@ -243,7 +241,7 @@
 
             <div class="accordion-item">
                 <button class="accordion-button">
-                    <span class="client-text">What if I don’t have all the content ready?</span>
+                    <span class="faq-text">What if I don’t have all the content ready?</span>
                     <i class="bi bi-plus"></i>
                 </button>
                 <div class="accordion-answer">
