push last changes

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <section id="clients" class="league-spartan-font text-center">
         <div class="container">
             <h3 class="fs-2 mb-sm">What our clients say</h3>
-            <p class="mb-lg client-text">"What I liked the most is you're very easy to reach. It doesn't take you long
+            <p class="mb-lg     ">"What I liked the most is you're very easy to reach. It doesn't take you long
                 to
                 <br> respond, and you always
                 do so in 1-2 hours. I really liked the way you followed the <br> design, and made my website like I
