--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body id="body">
+    <!-- navbar -->
     <section id="navbar">
         <nav class="dm-sans-font capitalize">
             <div class="logo">
@@ -58,7 +59,6 @@
     <!-- banner -->
     <section id="banner" class="text-center inter-font my-lg">
         <div>
-
             <h1 class="mb-sm fs-2 fw-900">
                 More leads from your <br> website, guaranteed.
             </h1>
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <i class="bi bi-browser-chrome fs-4 mb-lg"></i>
+                    <i class="bi bi-browser-chrome fs-4 mb-lg text-black"></i>
                     <h5 class="fs-2">You know a website is <br> important...</h5>
                     <p class="fs-5 fw-normal my-sm dm-sans-font">But it's easy to push aside until you miss out on
                         clients because <br> of it.</p>
@@ -98,26 +98,26 @@
             <h4 class="fs-3 mt-y-lg">So why should I choose you?</h4>
             <div class="why-choose-us-box-container">
                 <div class="why-choose-us-box">
-                    <i class="bi bi-person-raised-hand fs-4 d-inline-block"></i>
+                    <i class="bi bi-person-raised-hand fs-4 d-inline-block text-black"></i>
                     <h5 class="fs-3 mt-lg">No BS</h5>
                     <p class="py-sm">We won't waste your time with unecessary questions, <br> we only get the important
                         info
                         and get to
                         work.</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i></a>
+                    <a href="#">Learn more <i class="bi bi-arrow-up-right text-black fs-6"></i></a>
                 </div>
                 <div class="why-choose-us-box">
-                    <i class="bi bi-bar-chart-fill fs-4 d-inline-block"></i>
+                    <i class="bi bi-bar-chart-fill fs-4 d-inline-block text-black"></i>
                     <h5 class="fs-3 mt-lg">Result driven</h5>
                     <p class="py-sm">Our first priority is to get you results. Less talk <br> more walk.</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
+                    <a href="#">Learn more <i class="bi bi-arrow-up-right text-black fs-6"></i> </a>
                 </div>
                 <div class="why-choose-us-box">
-                    <i class="bi bi-brush-fill fs-4 d-inline-block"></i>
+                    <i class="bi bi-brush-fill fs-4 d-inline-block text-black"></i>
                     <h5 class="fs-3 mt-lg">3 revisions</h5>
                     <p class="py-sm">If you don't like something about your website, let <br> us know and we are up to
                         fix it.</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
+                    <a href="#">Learn more <i class="bi bi-arrow-up-right text-black fs-6"></i> </a>
                 </div>
             </div>
         </div>
@@ -127,37 +127,20 @@
     <section id="services" class="dm-sans-font my-lg">
         <div class="container">
             <h3 class="fs-2 fw-800 mt-y-lg">Services</h3>
-            <div class="service-boxes">
-                <div class="service-box w-70">
-                    <i class="bi bi-globe-europe-africa fs-3"></i>
+            <div class="service-boxes-1">
+                <div class="service-box w-60">
+                    <i class="bi bi-globe-europe-africa fs-3 text-black"></i>
                     <h5 class="fs-3 mt-lg">Custom web-design</h5>
                     <p class="py-sm">All the websites we make are custom designed to fix specifically your <br>
                         problems. NO templates
                     </p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
+                    <a href="#">Learn more <i class="bi bi-arrow-up-right fs-6 text-black"></i> </a>
                 </div>
-                <div class="service-box w-30">
-                    <i class="bi bi-check fs-3"></i>
+                <div class="service-box w-40">
+                    <i class="bi bi-check fs-3 text-black"></i>
                     <h5 class="fs-3 mt-lg">3D-design</h5>
                     <p class="py-sm">We use Spline to add custom 3d assets to your <br> website.</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
-                </div>
-            </div>
-            <div class="service-boxes mt-sm service-box-h-500">
-                <div class="service-box w-30">
-                    <i class="bi bi-bezier2 fs-3"></i>
-                    <h5 class="fs-3 mt-lg">Reservation <br> systems & <br> automations</h5>
-                    <p class="py-sm">We add reservation systems, reminders to reduce no-shows for you</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
-                </div>
-                <div class="service-box w-70">
-                    <i class="bi bi-globe fs-3"></i>
-                    <h5 class="fs-3 mt-lg">SEO Optimization</h5>
-                    <p class="py-sm">We adjust your sites copy and links to make sure your business ranks <br> the
-                        highest on Google
-                        and
-                        gets more traffic from it.</p>
-                    <a href="#">Learn more <i class="bi bi-arrow-up-right"></i> </a>
+                    <a href="#">Learn more <i class="bi bi-arrow-up-right fs-6 text-black"></i> </a>
                 </div>
             </div>
         </div>
@@ -196,7 +179,7 @@
                     </div>
                     <img src="assets/images/agency-work-image-8.png" height="300" alt="">
                 </a>
-              
+
             </div>
         </div>
     </section>
